Fix bounding rect calculation

BUG:242612